<resources>
    <string name="app_name">HealthCare</string>
    <string-array name="categoires">
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
        <item>Categories</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="gender">Gender</string>
    <string name="doctor_specific_hint">Specification</string>
    <string name="doctor_reg_id">Reg_Id</string>
    <string name="doctor_name">Name</string>
</resources>
