<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".Activity.Login">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="150dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:layout_marginTop="40dp"/>
                <!--  <include
                      layout="@layout/layout_register"/>-->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">
                    <LinearLayout

                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:paddingTop="50dp"
                        android:paddingBottom="50dp"
                        android:paddingStart="20dp"
                        android:paddingRight="20dp"
                        >

                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="@string/login"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <!-- <com.google.android.material.textfield.TextInputLayout
                             style="@style/parent"
                             android:layout_marginTop="@dimen/signup_text_margin_top">
                             <EditText
                                 style="@style/modifiedEditText"
                                 android:inputType="text"
                                 android:maxLines="1"
                                 android:hint="Name"/>
                         </com.google.android.material.textfield.TextInputLayout>

                         <com.google.android.material.textfield.TextInputLayout
                             style="@style/parent"
                             android:layout_marginTop="@dimen/signup_text_margin_top">
                             <EditText
                                 style="@style/modifiedEditText"
                                 android:inputType="text"
                                 android:maxLines="1"
                                 android:hint="Mobile Number"/>
                         </com.google.android.material.textfield.TextInputLayout>-->

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/u_email"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                android:id="@+id/u_password"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/u_login"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:text="@string/login"
                            android:layout_marginTop="20dp"
                            />

                        <TextView
                            android:id="@+id/u_sign_up_txt"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/login_signup_hint"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!-- <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="10dp"
                  />-->
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>